--- a/TechnogenicSoilPollution/TechnogenicSoilPollution.csproj
+++ b/TechnogenicSoilPollution/TechnogenicSoilPollution.csproj
@@ -93,12 +93,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CPoint\CoordinatesPoint.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Data\CoordinatesPoint.cs" />
+    <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ReferenceProgramForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ReferenceProgramForm.Designer.cs">
+      <DependentUpon>ReferenceProgramForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -120,14 +126,11 @@
     <Compile Include="UC\UCMap.Designer.cs">
       <DependentUpon>UCMap.cs</DependentUpon>
     </Compile>
-    <Compile Include="Window\AboutProgramForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Window\AboutProgramForm.Designer.cs">
-      <DependentUpon>AboutProgramForm.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ReferenceProgramForm.resx">
+      <DependentUpon>ReferenceProgramForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -147,9 +150,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UC\UCMap.resx">
       <DependentUpon>UCMap.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Window\AboutProgramForm.resx">
-      <DependentUpon>AboutProgramForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
