Creating a class for working with a map and calculations

--- a/TechnogenicSoilPollution/TechnogenicSoilPollution.csproj
+++ b/TechnogenicSoilPollution/TechnogenicSoilPollution.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <Compile Include="Data\CoordinatesPoint.cs" />
     <Compile Include="Data\WorkDatabase.cs" />
+    <Compile Include="Data\WorkMapCalc.cs" />
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
