Change the picture on the home page

--- a/TechnogenicSoilPollution/TechnogenicSoilPollution.csproj
+++ b/TechnogenicSoilPollution/TechnogenicSoilPollution.csproj
@@ -188,9 +188,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\email.png" />
+    <Content Include="Assets\factory.png" />
     <Content Include="Assets\github.png" />
     <Content Include="Assets\icon-app.ico" />
-    <Content Include="Assets\image-plant.jpg" />
     <Content Include="Assets\Rose-Wind-1996.png" />
     <Content Include="Assets\Rose-Wind-1997.png" />
     <Content Include="Database\Database-ImpurityEmission.sql" />
