--- a/TechnogenicSoilPollution/App.config
+++ b/TechnogenicSoilPollution/App.config
@@ -5,6 +5,9 @@
     <section name="entityFramework"
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="TechnogenicSoilPollution.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
@@ -28,4 +31,11 @@
       description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite"/>
     </DbProviderFactories>
   </system.data>
+  <userSettings>
+    <TechnogenicSoilPollution.Properties.Settings>
+      <setting name="DarkTheme" serializeAs="String">
+        <value />
+      </setting>
+    </TechnogenicSoilPollution.Properties.Settings>
+  </userSettings>
 </configuration>
