--- a/TechnogenicSoilPollution/TechnogenicSoilPollution.csproj
+++ b/TechnogenicSoilPollution/TechnogenicSoilPollution.csproj
@@ -101,6 +101,12 @@
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Messages\MessageExitForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Messages\MessageExitForm.Designer.cs">
+      <DependentUpon>MessageExitForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\PromptMapForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +150,9 @@
     </Compile>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Messages\MessageExitForm.resx">
+      <DependentUpon>MessageExitForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\PromptMapForm.resx">
       <DependentUpon>PromptMapForm.cs</DependentUpon>
